Slider btn z-index issue handled.

--- a/_sass/partials/_z-index.scss
+++ b/_sass/partials/_z-index.scss
@@ -2,6 +2,10 @@
   z-index: 1;
 }
 
-.light-box {
+.overlay {
   z-index: 2;
+}
+
+.light-box {
+  z-index: 3;
 }
